# neo-starter

./: .env.example  .gitignore  .hlint.yaml  AGENTS.md  README.md  cabal.project  docker-compose.yml  flake.nix  neohaskell-starter.cabal
.skills/event-modeling-parser/: SKILL.md
.skills/neohaskell-eventsourcing/: SKILL.md
.skills/neohaskell-reference/: SKILL.md
launcher/: Launcher.hs
nix/: hix.nix
src/: App.hs
src/Starter/: Config.hs
src/Starter/Counter/: Core.hs  Entity.hs  Event.hs  Service.hs
src/Starter/Counter/Commands/: CreateCounter.hs  DecrementCounter.hs  IncrementCounter.hs
src/Starter/Counter/Events/: CounterCreated.hs  CounterDecremented.hs  CounterIncremented.hs
src/Starter/Counter/Queries/: CounterView.hs
tests/integration/: smoke.hurl
tests/scenarios/: counter-flow.hurl
